# PalaceToolkit

./: .gitignore  MANIFEST.in  README.md  justfile  mkdocs.yml  package.json  pyproject.toml  setup.py  sst.config.ts  sst.pyi
.github/workflows/: docs-deploy.yml  docs-doctest.yml  palace-cpu-wheel.yml  palacetoolkit-publish.yml
docs/: conf.py  full-course.md  index.md
docs/examples/: coax.ipynb  coax_to_waveguide.ipynb  coplanar-waveguide.md  dielectric_waveguide_modes.ipynb  differential_microstrip_modes.ipynb  dipole-antenna.md  dipole.msh  dipole_antenna.ipynb  dipole_antenna_mesh.ipynb  hollow_waveguide_modes.ipynb  horn_antenna.ipynb  index.md  l_antenna.ipynb  microstrip_modes.ipynb  monopole_antenna.ipynb  op_spalace.conf  open_ended_stub.ipynb  palace.conf  patch.config  patch_antenna.ipynb  slotline_modes.ipynb  step_in_width.ipynb  vivaldi_antenna.ipynb  waveguide_box.ipynb  waveguides-and-horn-antenna.md
docs/examples/img/: cpw_driven.htm  cpw_eigenmode.htm  dipole_mesh.htm
docs/getting-started/: compatibility-policy.md  compile_instructions_ubuntu.md  geometry-and-meshing.md  index.md  post-processing.md  simulation-setup.md
docs/javascripts/: mathjax.js
docs/stylesheets/: interactive.css
site/: 404.html  index.html  sitemap.xml
site/examples/: index.html
site/examples/coax/: coax.ipynb  index.html
site/examples/coax_to_waveguide/: coax_to_waveguide.ipynb  index.html
site/examples/dielectric_waveguide_modes/: dielectric_waveguide_modes.ipynb  index.html
site/examples/differential_microstrip_modes/: differential_microstrip_modes.ipynb  index.html
site/examples/dipole_antenna_mesh/: dipole_antenna_mesh.ipynb  index.html
site/examples/hollow_waveguide_modes/: hollow_waveguide_modes.ipynb  index.html
site/examples/horn_antenna/: horn_antenna.ipynb  index.html
site/examples/img/: coax_mesh.htm  dipole_mesh.htm  horn_antenna_mesh.htm  waveguide_box_mesh.htm
site/examples/l_antenna/: index.html  l_antenna.ipynb
site/examples/microstrip_modes/: index.html  microstrip_modes.ipynb
site/examples/monopole_antenna/: index.html  monopole_antenna.ipynb
site/examples/open_ended_stub/: index.html  open_ended_stub.ipynb
site/examples/palace-sim-example/: palace.conf
site/examples/patch_antenna/: index.html  patch_antenna.ipynb
site/examples/slotline_modes/: index.html  slotline_modes.ipynb
site/examples/step_in_width/: index.html  step_in_width.ipynb
site/examples/waveguide_box/: index.html  waveguide_box.ipynb
site/full-course/: index.html
site/getting-started/: index.html
site/getting-started/geometry-and-meshing/: index.html
site/getting-started/post-processing/: index.html
site/getting-started/simulation-setup/: index.html
site/stylesheets/: interactive.css
src/: __init__.py  analytic.py  mesh.py  simulation.py  verify_topology.py  viz.py
src/palacetoolkit/: __init__.py  analytic.py  cli.py  geometry.py  mesh.py  mode_solver.py  palace_runtime.py  plot_farfield.py  postpro.py  postpro_vtu.py  s_plot.py  simulation.py  utils.py  verify_topology.py  viz.py
tests/: test_docs_build.py  test_docs_notebooks.py  test_postpro_vtu.py  test_simulation_run_palace.py
tools/: build_palace.py  install_local_editable.sh
