[project]
name = "palace-toolkit"
version = "0.1.0"
description = "PALACE electromagnetic simulation course materials"
requires-python = ">=3.8"
dependencies = [
    "palacetoolkit-palace-cpu @ https://github.com/EpsilonForge/PalaceToolkit/releases/download/palace-cpu-v0.1.1/palacetoolkit_palace_cpu-0.1.1-py3-none-linux_x86_64.whl ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "gmsh",
    "numpy",
    "scipy",
    "meshio",
    "mfem",
    "pyvista",
    "enlighten",
    "pint",
]

[project.optional-dependencies]
plot = ["pandas", "matplotlib"]
palace-cpu = ["palacetoolkit-palace-cpu @ https://github.com/EpsilonForge/PalaceToolkit/releases/download/palace-cpu-v0.1.1/palacetoolkit_palace_cpu-0.1.1-py3-none-linux_x86_64.whl ; platform_system == 'Linux' and platform_machine == 'x86_64'"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter",
    "pyvista[jupyter]",
    "nbconvert",
    "ipykernel",
    "papermill",
    "pytest",
    "nb-clean",
    "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docs: execute documentation notebooks",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["palacetoolkit", "palacetoolkit.*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
