[project]
name = "palace-toolkit"
version = "0.1.4"
description = "PALACE electromagnetic simulation course materials"
requires-python = ">=3.8"
dependencies = [
    "gmsh",
    "numpy",
    "scipy",
    "meshio",
    "mfem",
    "pyvista",
    "enlighten",
    "pint",
]

[project.optional-dependencies]
plot = ["pandas", "matplotlib"]
palace-cpu = []
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter",
    "pyvista[jupyter]",
    "nbconvert",
    "ipykernel",
    "papermill",
    "pytest",
    "nb-clean",
    "pre-commit",
]

[project.scripts]
palace-toolkit-check = "palacetoolkit.cli:palace_toolkit_check"
palace-toolkit-install-binary = "palacetoolkit.cli:palace_toolkit_install_binary"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docs: execute documentation notebooks",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["palacetoolkit", "palacetoolkit.*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
