[project]
name = "palace-toolkit"
version = "0.1.5"
description = "PALACE electromagnetic simulation course materials"
requires-python = ">=3.8"
dependencies = [
    "gmsh",
    "numpy",
    "pandas",
    "scipy",
    "meshio",
    "mfem",
    # mfem depends on numba (unconstrained). Without a pin, uv's cross-platform
    # resolution backtracks to numba 0.53.1 on Windows (due to a numpy<2.5 vs
    # numpy 2.5.1 conflict with scipy), which pulls llvmlite 0.36.0 — incompatible
    # with Python 3.12. numba 0.62.1 has wheels for all target platforms (win,
    # macOS x86_64/arm64, Linux x86_64) and supports Python 3.12.
    "numba>=0.62,<0.63",
    "pyvista",
    "enlighten",
    "pint",
]

[project.optional-dependencies]
plot = ["pandas", "matplotlib"]
palace-cpu = []
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser",
    "myst-nb",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-autobuild",
    "linkify-it-py",
    "pyvista[jupyter]",
    "nbconvert",
    "ipykernel",
    "papermill",
    "pytest",
    "nb-clean",
    "pre-commit",
]

[project.scripts]
palace-toolkit-check = "palacetoolkit.cli:palace_toolkit_check"
palace-toolkit-install-binary = "palacetoolkit.cli:palace_toolkit_install_binary"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docs: execute documentation notebooks",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["palacetoolkit", "palacetoolkit.*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
